--- a/index.html
+++ b/index.html
@@ -79,40 +79,179 @@
         
         <div class="mt-8 flex w-full justify-between">
         <div class="flex flex-col gap-3 w-2/5">
-            <button  class="bg-blue-500 text-white px-4 py-2 rounded-full flex justify-between">
-                <span>Our main features</span>
+            <button  class="bg-blue-500 text-white px-4 py-2.5 rounded-full flex justify-between">
+                <span class="font-semibold">Our main features</span>
                 <img src="./assets/Icons/Group 238511.svg" alt="" class="inline w-5">
             </button>
-            <button class="border-2 border-neutral-300 px-4 py-2 rounded-full flex justify-between">
-                <span>Speed optimization</span>
+            <button class="border-2 border-neutral-300 px-4 py-2.5 rounded-full flex justify-between">
+                <span class="font-semibold">Speed optimization</span>
                 <img src="./assets/Icons/Group 238512.svg" alt="" class="inline w-5">
             </button>
-            <button class="border-2 border-neutral-300 px-4 py-2 rounded-full flex justify-between">
-                <span>Downtime and security optimization</span>
+            <button class="border-2 border-neutral-300 px-4 py-2.5 rounded-full flex justify-between">
+                <span class="font-semibold">Downtime and security optimization</span>
                 <img src="./assets/Icons/Group 238512.svg" alt="" class="inline w-5">
             </button>
-            <button class="border-2 border-neutral-300 px-4 py-2 rounded-full flex justify-between">
-                <span>Additional features</span>
+            <button class="border-2 border-neutral-300 px-4 py-2.5 rounded-full flex justify-between">
+                <span class="font-semibold">Additional features</span>
                 <img src="./assets/Icons/Group 238512.svg" alt="" class="inline w-5">
             </button>
-            <button class="border-2 border-neutral-300 px-4 py-2 rounded-full flex justify-between">
-                <span>Best technical support service</span>
+            <button class="border-2 border-neutral-300 px-4 py-2.5 rounded-full flex justify-between">
+                <span class="font-semibold">Best technical support service</span>
                 <img src="./assets/Icons/Group 238512.svg" alt="" class="inline w-5">
             </button>
         </div>
         <div class="w-1/2">
-            <div class="bg-black text-white flex flex-col px-2 py-2 rounded-3xl gap-1.5 w-1/2 text-sm">
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Number of Websites</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Number of Email Accounts</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Unlimited MySQL Databases</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Unlimited Bandwidth</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Unlimited Sub & Parked Domains</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">30 Days Unconditional Guarantee</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Free Domain</button>
-                <button class="bg-neutral-500 rounded-full px-1 py-1 text-left">Disk Space</button>
-        </div>
+            <div class="bg-black text-white flex flex-col px-2 py-2 rounded-3xl gap-1.5 w-1/2 text-sm">   
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Number of Websites</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Number of Email Accounts</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Unlimited MySQL Databases</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Unlimited Bandwidth</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Unlimited Sub & Parked Domains</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">30 Days Unconditional Guarantee</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Free Domain</li>
+                <li class="bg-neutral-700 rounded-full pl-[1rem] py-1 text-left">Disk Space</li>
+            </div>
         </div>
     </div>
     </section>
+    <section class="bg-black text-white px-44 py-16">
+        <div class="flex justify-around">
+            <img src="./assets/Icons/arrow-left.svg" alt="" class="h-[100px]">
+            <h2 class="text-3xl font-semibold text-center">Hosting your website with the<br>services we provide</h2>
+            <img src="./assets/Icons/arrow-right.svg" alt="" class="h-[100px]">
+        </div>
+        <div class="flex justify-center gap-4">
+            <div class="mt-12 flex flex-col gap-2 px-4 py-4 w-1/3 bg-neutral-100 text-black rounded-[30px] text-sm">
+                <h3 class="text-xl font-semibold">Regular</h3>
+                <h4 class="text-2xl font-semibold">$8,9<span class="text-sm text-neutral-400">/month</span></h4>
+                <p class="text-xs">Suitable for you who will build a website and others.</p>
+                <hr>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Up to 16,000 Visitors/Month</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                500MB SSD Disk Space</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Unlimited Bandwidth</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Unlimited Databases</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Instant Backup</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                1 Email Account</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                1 Domain</p>
+                <button class="bg-blue-500 text-white px-7 py-2 rounded-full">Select</button>    
+            </div>
+            <div class="mt-12 flex flex-col gap-2 px-4 py-4 w-1/3 bg-blue-500 text-white rounded-[30px] text-sm">
+                <h3 class="text-xl font-semibold">Standard</h3>
+                <h4 class="text-2xl font-semibold">$12,98<span class="text-sm text-neutral-400">/month</span></h4>
+                <p class="text-xs">Suitable for business, such as a website or management system for complaints</p>
+                <hr>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Up to 36,000 Visitors/Month</p>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Unlimited SSD Disk Space</p>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Unlimited Bandwidth</p>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Unlimited Databases</p>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Instant Backup</p>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Unlimited Account</p>
+                <p><img src="./assets/Icons/white-tick.svg" alt="White Tick" class="inline-block">
+                Unlimited Addon Domain</p>
+                <button class="bg-white text-blue-500 px-7 py-2 rounded-full">Select</button>
+            </div>
+            <div class="mt-12 flex flex-col gap-2 px-4 py-4 w-1/3 bg-neutral-200 text-black rounded-[30px] text-sm">
+                <h3 class="text-xl font-semibold">Premium</h3>
+                <h4 class="text-2xl font-semibold">$19,99<span class="text-sm text-neutral-400">/month</span></h4>
+                <p class="text-xs">Suitable for those of you who need spacial physical server performance and security</p>
+                <hr>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Up to 200,000 Visitors/Month</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                500MB SSD Disk Space</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Unlimited Bandwidth</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Unlimited Databases</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Instant Backup</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Unlimited Account</p>
+                <p><img src="./assets/Icons/blue-tick.svg" alt="Blue Tick" class="inline-block">
+                Free Domain</p>
+                <button class="bg-blue-500 text-white px-7 py-2 rounded-full">Select</button>
+            </div>
+        </div>
+        </section>
+        <section class="px-20 py-16">
+            <div class="flex justify-around">
+                <h2 class="text-3xl font-semibold">What do our<br>customers say?</h2>
+                <p class="text-gray-400 text-sm w-1/2">You will definitely be surprised how our customers comment on what we do so well, because we really prioritize the satisfaction of our customers.</p>
+            </div>
+            <div class="flex justify-around gap-8 px-20 mt-10">
+                <div class="w-1/2 bg-black text-sm text-neutral-100 px-4 py-6 rounded-[20px]">
+                    <img src="./assets/Icons/vuesax/bulk/vuesax/bulk/Vector.svg" class="inline-block mb-3">
+                    <img src="./assets/Icons/vuesax/bulk/vuesax/bulk/Vector-1.svg" class="inline-block mb-3">
+                    <h4>Slamet Wijaya</h4>
+                    <p class="text-xs text-neutral-400">CEO Tokped</p>
+                    <p class="my-2">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</p>
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                </div>
+                <div class="w-1/2 text-sm px-4 py-6 rounded-[20px] border-2 border-neutral-300">
+                    <img src="./assets/Icons/vuesax/bulk/vuesax/bulk/Vector.svg" class="inline-block mb-3">
+                    <img src="./assets/Icons/vuesax/bulk/vuesax/bulk/Vector-1.svg" class="inline-block mb-3">
+                    <h4>Slamet Wijaya</h4>
+                    <p class="text-xs text-neutral-400">CEO Tokped</p>
+                    <p class="my-2">Web hosting that I highly recommend because the service provided is very good, hosting is fast so with a pretty fantastic speed.</p>
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                    <img src="./assets/Icons/Star.svg" alt="Star" class="inline-block w-[15px]">
+                </div>
+            </div>
+            <hr class="mt-10 border-2 border-blue-500 inline-block w-[100px] rounded-[5px]"><hr class="mt-5 border-2 inline-block w-4/5">
+        </section>
+        <section class="flex flex-col gap-10 bg-black text-neutral-300 text-sm px-44 py-10">
+            <h2 class="text-3xl text-center text-white">Sign Up now for as much hosting and<br>domain as you want for $20.99/year</h2>
+            <div class="flex justify-center gap-4 bg-neutral-800 rounded-3xl px-4 py-8">
+                <input type="text" placeholder="Name" class="bg-neutral-700 rounded-3xl px-3 text-left">
+                <input type="text" placeholder="E-mail Address" class="bg-neutral-700 rounded-3xl px-3 text-left">
+                <input type="text" placeholder="Password"  class="bg-neutral-700 rounded-3xl px-3 text-left">
+                <input type="button" value="Sign Up" class="bg-blue-500 text-white rounded-3xl px-3 py-2">
+            </div>
+            <hr class="border-1 border-neutral-600">
+            <div class="grid grid-rows-5 grid-cols-4 gap-1">
+                <div class="font-semibold">Company</div>
+                <div class="font-semibold">Features</div>
+                <div class="font-semibold">Help</div>
+                <div class="font-semibold">Social Media</div>
+                <div>About Us</div>
+                <div>Domain</div>
+                <div>Payment</div>
+                <div>Instagram</div>
+                <div>Contact us</div>
+                <div>Hosting</div>
+                <div>Know Ledgebase</div>
+                <div>Twitter</div>
+                <div>Carier</div>
+                <div>WordPress</div>
+                <div>Tutorials</div>
+                <div>Facebook</div>
+                <div>Blog</div>
+                <div>Web Security</div>
+                <div></div>
+                <div>Youtube</div>
+            </div>
+            <hr class="border-1 border-neutral-600">
+            <img src="./assets/Logo.svg" alt="" class="w-[100px]">
+        </section>
 </body>
 </html>
